# email_client

./: .env.example  .gitignore  Cargo.toml  TODO.txt  build.rs  out.txt  release.sh
client/: Cargo.toml
client/src/: either.rs  main.rs  network.rs
client/src/models/: email.rs  email_attachment.rs  user.rs
client/src/ui/: email_display.rs  email_list.rs  inbox_blocks.rs  inbox_list.rs  login.rs  mod.rs
client/static/: index.html  style.css
client/templates/: email_list.tera  email_view.tera
database/: Cargo.toml  build_script.md  diesel.toml
database/migrations/2019-01-23-193933_initial/: down.sql  up.sql
database/migrations/2019-03-02-162752_email_v2/: down.sql  up.sql
database/migrations/2019-03-18-182204_basic_mail/: down.sql  up.sql
database/migrations/2019-03-20-101238_user_interface_basics/: down.sql  up.sql
database/src/: lib.rs  schema.patch  schema.rs
database/src/models/: email.rs  email_2.rs  email_header.rs  email_header_2.rs  email_part.rs  mod.rs  request.rs  user.rs
email_interface/: Cargo.toml
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2018-08-19-083200_initial/: up.sql
migrations/2018-08-26-102041_v2/: down.sql  up.sql
postfix_connector/: Cargo.toml  out.txt
postfix_connector/proptest-regressions/: main.txt
postfix_connector/src/: config.rs  main.rs
postfix_connector/src/data/: attachment.rs  mail.rs  mod.rs
proto/: attachment.proto  authenticate.proto  email.proto  entry.proto  inbox.proto
server/: .env.example  Cargo.toml  Dockerfile
server/migrations/2018-08-19-083200_initial/: down.sql  up.sql
server/migrations/2018-08-26-102041_v2/: up.sql
server/migrations/2019-08-03-174142_user_authentication/: down.sql  up.sql
server/migrations/2019-08-06-094550_unread_emails/: down.sql  up.sql
server/migrations/2019-08-14-162542_user_auth_token/: down.sql  up.sql
server/queries/: select_email_headers_by_inbox.sql  select_email_headers_without_inbox.sql  select_user_inboxes.sql
server/src/: attachment.rs  auth.rs  cors.rs  gzip.rs  mail_reader.rs  main.rs  message.rs  utils.rs
server/src/data/: database.rs  messages.rs  mod.rs
server/src/data/models/: email.rs  email_attachment.rs  email_attachment_header.rs  email_header.rs  inbox.rs  mod.rs
server/src/models/: mail.rs  mail_header.rs  mail_part.rs  mod.rs  schema.rs  user.rs  user_inbox.rs
server/src/web/: mod.rs  serve.rs
server/src/web/socket/: client.rs  server.rs
server/src/web/socket/message/: authentication.rs  load_attachment.rs  load_email.rs  load_inbox.rs  mod.rs
shared/: Cargo.toml
shared/src/: client_to_server.rs  lib.rs  server_to_client.rs
shared/src/data/: attachment.rs  email.rs  inbox.rs  login.rs  mod.rs
smtp_server_core/: Cargo.toml
smtp_server_core/src/: lib.rs  non_shitty_channel.rs  non_shitty_lines_codec.rs
smtp_server_postgres/: Cargo.toml
smtp_server_postgres/src/: main.rs
src/: attachment.rs  mail_reader.rs  main.rs  message.rs  tera_utils.rs
src/data/: database.rs  executor.rs  messages.rs  mod.rs  models.rs  schema.rs
src/data/models/: email.rs  email_attachment.rs  email_attachment_header.rs  email_header.rs  inbox.rs
src/models/: email.rs  email_attachment.rs  email_header.rs  inbox.rs  mod.rs
src/proto/: mod.rs
src/web/: mod.rs  serve.rs
src/web/socket/: client.rs  messages.rs  mod.rs  server.rs
src/web/socket/message/: authentication.rs  load_attachment.rs  load_email.rs  load_inbox.rs  mod.rs
templates/: _layout.tera  email_list.tera  email_view.tera  inbox_list.tera  login.tera
ui/: generate.bat  package-lock.json  package.json  tsconfig.json  webpack.config.js
ui/src/: index.tsx  protobuf_compiled.d.ts  protobuf_compiled.js  server.ts  websocket.ts
ui/src/components/: AttachmentPopup.tsx  Login.tsx  MailRenderer.tsx  Menu.tsx  Root.tsx
ui2/: Cargo.toml
ui2/src/: main.rs  network.rs
ui2/src/ui/: email_list.rs  inbox_blocks.rs  inbox_list.rs  mod.rs
ui2/static/: index.html
web/: Cargo.toml  Rocket.toml.example
web/src/: main.rs
web/src/components/: email_list.rs  email_render.rs  inbox_list.rs  login.rs  mod.rs
web/src/models/: mod.rs  user.rs
web/src/rocket_utils/: error.rs  mod.rs  request.rs
web/src/utils/: fetch.rs  mod.rs  translate.rs
web/src/view/: auth.rs  mod.rs
web/static/: index.html  style.css
web/templates/: _layout.html  _layout_no_login.html  _menu.html  email.html  index.html  landing_page.html  login.html  register.html
