[package]
authors = ["admin"]
name = "mail"
version = "0.1.0"

[dependencies]
actix = "0.7.4"
actix-web = "0.7.4"
clap = "2.32.0"
dotenv = "0.13.0"
failure = "0.1.2"
futures = "0.1.23"
imap = "0.8.1"
mailparse = "0.6.2"
native-tls = "0.1.5"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
serde = "1.0.75"
serde_derive = "1.0.75"
serde_json = "1.0.26"
html_sanitizer = "0.1.1"

[dependencies.chrono]
features = ["serde"]
version = "0.4.6"

[dependencies.diesel]
features = ["postgres", "uuid"]
version = "1.3.2"

[dependencies.uuid]
features = ["serde"]
version = "0.6.5"
