[package]
authors = ["admin"]
name = "mail"
version = "0.1.0"

[dependencies]
actix = "0.7.4"
actix-web = "0.7.8"
clap = "2.32.0"
dotenv = "0.13.0"
failure = "0.1.2"
futures = "0.1.24"
html_sanitizer = "0.1.1"
imap = "0.8.1"
mailparse = "0.6.4"
native-tls = "0.1.5" # dependant on mailparse
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.31"
lettre = "0.8"
lettre_email = "0.8"
lazy_static = "1.1.0"

[dependencies.chrono]
features = ["serde"]
version = "0.4.6"

[dependencies.diesel]
features = ["postgres", "uuid"]
version = "1.3.2"

[dependencies.uuid]
features = ["serde"]
version = "0.6.5"
