[package]
name = "email_client"
version = "0.1.0"
authors = ["Victor Koenders <victor.koenders@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
failure = "0.1.3"
dotenv = "0.13.0"
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.33"
rust-crypto = "0.2.36"
pulldown-cmark = "0.2.0"

[dependencies.diesel]
features = ["postgres", "uuid", "chrono"]
version = "1.3.3"

[dependencies.rocket_contrib]
default-features = false
features = ["diesel_postgres_pool", "tera_templates", "serve", "uuid"]
version = "0.4.0"

[dependencies.uuid]
version = "0.6.5" # dependent of diesel
features = ["serde", "v4"]

[dependencies.chrono]
version = "0.4.6"
features = ["serde"]
