[package]
authors = ["Victor Koenders <victor.koenders@gmail.com>"]
edition = "2018"
name = "client"
version = "0.1.0"

[dependencies]
yew = { git = "https://github.com/DenisKolodin/yew", rev = "33ebfcbe5e5fe4dda97a9cadd1e6bb4e9483018a" }
failure = "0.1.2"
serde = "1.0.80"
serde_derive = "1.0.80"
bincode = "1.0.1"
