[package]
name = "database"
version = "0.1.0"
authors = ["Victor Koenders <victor.koenders@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4"
failure = "0.1"
dotenv = "0.13"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rust-crypto = "0.2"
pulldown-cmark = "0.2"

[dependencies.diesel]
features = ["postgres", "uuidv07", "chrono"]
version = "1.4"

[dependencies.rocket_contrib]
default-features = false
features = ["diesel_postgres_pool", "tera_templates", "serve", "uuid"]
version = "0.4"

[dependencies.uuid]
version = "0.7" 
features = ["serde", "v4"]

[dependencies.chrono]
version = "0.4.6"
features = ["serde"]

