[package]
authors = ["admin"]
name = "mail"
version = "0.1.0"
edition = "2018"

[dependencies]
actix = "0.7.5"
actix-web = "0.7.13"
clap = "2.32.0"
dotenv = "0.13.0"
failure = "0.1.2"
futures = "0.1.25"
html_sanitizer = "0.1.1"
imap = "0.8.1"
native-tls = "0.1.5" # dependant on imap
mailparse = "0.6.4"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.32"
lettre = "0.8"
lettre_email = "0.8"
# lazy_static = "1.1.0"
shared = { path = "../shared" }

# [dependencies.chrono]
# features = ["serde"]
# version = "0.4.6"

[dependencies.diesel]
features = ["postgres", "uuid"]
version = "1.3.3"

[dependencies.uuid]
features = ["serde"]
version = "0.6.5" # dependent on diesel

[build-dependencies]
protoc-rust = "2.1"
