[package]
authors = ["Trangar <victor.koenders@gmail.com>"]
edition = "2018"
name = "server"
version = "0.1.0"

[dependencies]
chrono = "0.4"
dotenv = "0.14"
failure = "0.1"
pbkdf2 = "0.3"
rocket = "0.4"
serde_json = "1.0"
uuid = "0.7"
time = "0.1"

[dependencies.rocket_contrib]
version = "0.4"
features = ["diesel_postgres_pool"]

[dependencies.diesel]
features = ["postgres", "chrono", "uuidv07"]
version = "1.4"

[dependencies.shared]
path = "../shared"
