[package]
name = "shared"
version = "0.1.0"
authors = ["Trangar <victor.koenders@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.7", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
base64-serde = "0.3"
base64 = "0.10"
