[package]
authors = ["Victor Koenders <victor.koenders@gmail.com>"]
edition = "2018"
name = "web"
version = "0.1.0"

[dependencies]
askama = "0.8"
chrono = "0.4"
dotenv = "0.13"
failure = "0.1"
rocket = "0.4"
database = { path = "../database" }

[dependencies.rocket_contrib]
features = ["json", "diesel_postgres_pool"]
version = "0.4"

[dependencies.uuid]
features = ["v4"]
version = "0.7"
