[package]
name = "web"
version = "0.1.0"
authors = ["Trangar <victor.koenders@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.7"
shared = { path = "../shared" }
serde = "1.0"
serde_json = "1.0"
failure = "0.1"
lazy_static = "1.3"
stdweb = "0.4"
url = "2.1"
